# hyprconfig

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
